# file-server

./: .gitignore
client/: Cargo.toml  test_file.txt  test_file2.txt
client/src/: cli.yml  main.rs
server/: Cargo.toml
server/src/: lib.rs
