[package]
name = "client"
version = "0.1.0"
authors = ["vulfke482 <denis.kartashov@482.solutions>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.3"
data-encoding = "2.1.2"

[dependencies.clap]
features=["yaml"]
version="2.33.0"