[package]
name = "tolyaproject"
version = "0.1.0"
authors = ["vulfke482 <denis.kartashov@482.solutions>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.13.0"
ring = "0.16.9"
data-encoding = "2.1.2"
threadpool="1.7.1"